#6: Rename CITIES_WITH_SAME_NAME_IS_EMPTY to CITY_DATA_WITH_SAME_CITY_NAME_IS_EMPTY and similiar occurences and modify unit tests to test CityData.